# wibandwob-dos-tvision

./: .env.example  .gitignore  .gitmodules  .sprite  260222-1953-w3--o-o-spawned.txt  AGENTS.md  CLAUDE.md  CMakePresets.json  HANDOVER.md  README.md  context.md  output.md  package-lock.json  start_api_server.sh
.claude/: settings.json
.claude/hooks/: desktop-state.sh  parity-check.sh  pre-commit-main-guard.sh
.codex-logs/: paint-workspace-review-report.md
.codex-logs/2026-02-24/: codex-paint-review-report.md
.github/workflows/: contract-tests.yml
.pi/: APPEND_SYSTEM.md  SCOUT_FINDINGS.md  WINDOW_TYPES.json  WINDOW_TYPES_CATALOGUE.md
.pi/agents/: codex-analyst.md  codex-worker.md
.pi/extensions/: gallery.ts
.pi/themes/: wibwob-tv.json
.planning/: 2026-02-26-todo.md  parking-lot.md  spk01-snap-window-devlog.md
.planning/.trash/: cross-platform-tvision-linux.md  spk-app-architecture-review.md
.planning/audits/: arrangement-tests.md  command-surface-audit-20260224.md  epic-status-audit-20260222.md  local-dev-friction-20260223.md  placement-bug-analysis.md  window-spawn-audit-20260223.md
.planning/epics/: EPIC_STATUS.md
.planning/retros/: retro-figlet-catalogue-menu-wiring.md
.planning/sparks/: agent-state-injection.md  micropolis-sigbus-clearmap.md  scramble-agent-commands.md
.planning/spikes/: spk-app-architecture-review.md  spk-desktop-texture-color.md  spk-paint-figlet-stamp.md  spk03-agent-experience-audit.md
.trash/spk-workspace-rename/: spk01-workspace-rename-brief.md
.zilla/: wibwob-dos.code-workspace
app/: BACKROOMS_TV.md  CMakeLists.txt  README.md  api_ipc.cpp  api_ipc.h  app_launcher_view.cpp  ascii_gallery_view.cpp  ascii_gallery_view.h  backrooms_tv_view.cpp  backrooms_tv_view.h  browser_view.cpp  browser_view.h  command_registry.cpp  command_registry.h  command_registry_test.cpp  contour_map_view.cpp  contour_map_view.h  deep_signal_view.cpp  figlet_text_view.cpp  figlet_text_view.h  figlet_utils.cpp  figlet_utils.h  frame_file_player_view.cpp  frame_file_player_view.h  generative_lab_view.cpp  generative_lab_view.h  mycelium_pc.cpp  notitle_frame.h  rogue_view.cpp  room_chat_view.cpp  room_chat_view.h  run_wwdos_logged.sh  scramble_engine.cpp  scramble_engine.h  scramble_engine_test.cpp  scramble_view.cpp  scramble_view.h  test_pattern_app.cpp  text_editor_view.cpp  text_editor_view.h  (+17 more)
app/core/: json_utils.h  primer_utils.h
app/llm/base/: llm_config.cpp  llm_config.h
app/llm/config/: llm_config.json
app/llm/providers/: anthropic_api_provider.cpp  anthropic_api_provider.h  claude_code_sdk_provider.cpp  claude_code_sdk_provider.h
app/llm/sdk_bridge/: claude_sdk_bridge.js  mcp_tools.js
app/llm/tools/: tui_tools.cpp
app/micropolis/: micropolis_bridge.cpp  micropolis_bridge.h
app/paint/: figlet_stamp_dialog.cpp  figlet_stamp_dialog.h  paint_canvas.cpp  paint_canvas.h  paint_window.cpp  paint_window.h  paint_wwp_codec.cpp  paint_wwp_codec.h
app/ui/: ui_helpers.h
app/windows/: frame_animation_window.cpp  frame_animation_window.h
config/sprites/: README.md  default-layout.json
docs/: CODEX-RETRO-20260218.md  readme-stub.md
docs/architecture/: chat-message-flow.md  parity-drift-audit.md  phase-zero-canon-alignment.md
docs/sprites/: README.md
exports/contour/: 20260227T114924_meadow_s75249.txt  20260227T120105_meadow_s23803.txt  20260227T121931_ridge-valley_s45853.txt  20260227T122208_meadow_s92567.txt  20260227T122707_saddle-pass_s86311.txt  20260227T122714_lone-peak_s96032.txt  20260227T122719_twin-peaks_s6052.txt  20260227T122801_archipelago_s65092.txt  20260227T122810_archipelago_s65092.txt  20260227T122822_archipelago_s65092.txt  20260227T122856_meadow_s62230.txt  20260227T122929_twin-peaks_s78703.txt  20260227T122940_lone-peak_s15737.txt  20260227T123009_saddle-pass_s82245.txt  20260227T123020_caldera_s52258.txt  20260227T151602_saddle-pass_s59470.txt  20260227T151605_saddle-pass_s59470.txt  20260227T151643_saddle-pass_s52972.txt  20260227T152415_meadow_s1008.txt  20260227T180738_archipelago_s34310.txt
exports/generative/: 20260227T175513_random_s84488.yml  20260227T175640_coral-reef_s51786.yml  20260227T190226_game-of-life_s41532.yml  20260227T191317_game-of-life_s66082.yml  20260227T191532_game-of-life_s51834.yml  20260227T193309_game-of-life_s26.yml  20260228T115224_coral-reef_s33112.txt  20260228T115226_coral-reef_s33112.txt  20260228T115244_random_s33161.yml  20260228T115251_random_s33757.txt  20260228T115253_random_s33757.txt  20260228T115310_random_s95386.txt  20260228T115316_random_s17415.txt
modules/: README.md
modules-private/wibwob-prompts/: wibandwob.prompt.md
modules/wibwob-figlet-fonts/: README.md  fonts.json  module.json
paintings/: api_test.wwp  face.wwp  figlet_test.wwp  opentest.wwp  roundtrip_test.wwp  shite.wwp  test1.wwp  wib_wob_figlet.wwp
partykit/: package-lock.json  package.json  partykit.json
partykit/src/: server.ts  wibwob-room.test.ts
scratch/: contour_map.py  contour_map2.py  contour_map3.py  contour_tui.py
scratch/contour_exports/: contour_20260226_164842_s42_archipelago_single.txt  contour_20260226_164842_s42_archipelago_triptych.txt  contour_20260226_164842_s42_caldera_single.txt  contour_20260226_164842_s42_caldera_triptych.txt  contour_20260226_164842_s42_lone_peak_single.txt  contour_20260226_164842_s42_lone_peak_triptych.txt  contour_20260226_164842_s42_meadow_single.txt  contour_20260226_164842_s42_meadow_triptych.txt  contour_20260226_164842_s42_ridge_valley_single.txt  contour_20260226_164842_s42_ridge_valley_triptych.txt  (+4 more)
scripts/: dev-start.sh  dev-stop.sh  init-submodules.sh  parity-check.py  snap.sh  sprite-setup.sh  sprite-user-session.sh  stamp.sh  tmux-launch.sh  workspace_snapshot.py
tests/: ipc_chain_stories.json  run_ipc_chain.py  test_ipc_chain.sh  test_menu_null_submenu.sh  test_paint_ipc.py
tools/: arrange.py  contour_stream.py  generative_engine.py  generative_stream.py  smoke_parade.py
workings/: scramble-async-freeze-diagnosis-2026-02-22.md  scramble-freeze-deep-dive-2026-02-22.md  scramble-freeze-fix-report.md
(+317 files in other folders)
